@@ -3,7 +3,7 @@ In alphabetical order:
 
 Laurent Gautier         for helpful discussions on R internals
 Alistair Gee            for a patch making ColDatum more robust
-Christian Gunning       for a documentation patch
+Christian Gunning       for a documentation patch and reporting bugs
 Uwe Ligges              for help with Windows (32 and 64 bit) build issues
 Tama Ma                 for a patch that extends Module constructors
 Karl Millar             for a patch helping with a non-g++ compiler
